--- a/app/templates/jornadas.html
+++ b/app/templates/jornadas.html
@@ -18,6 +18,7 @@
             <td>{{ j.matricula }}</td>
             <td>{{ j.kms_inicio }}-{{ j.kms_fin }}</td>
             <td>
+                <a href="/jornadas/{{ j.id }}/editar">Editar</a>
                 <form action="/jornadas/{{ j.id }}/eliminar" method="post" style="display:inline">
                     <button type="submit">Borrar</button>
                 </form>
@@ -25,6 +26,6 @@
         </tr>
         {% endfor %}
     </table>
-    <a href="/">Volver</a>
+    <a href="/">Volver</a> | <a href="/consulta">Informes</a>
 </body>
 </html>
